--- a/client/src/styles/Inicio.css
+++ b/client/src/styles/Inicio.css
@@ -1,11 +1,9 @@
-
-/* ESTILOS INCIO ADMIN*/
-master
 /* Reset básico */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+  }
   
   body {
     font-family: Arial, sans-serif;
@@ -23,7 +21,7 @@ master
     flex: 1;
     overflow-y: auto;
     text-align: center;
-    background-color: s#f1f1f1;
+    background-color: #f1f1f1;
   }
 
   .contenido-inicio {
@@ -114,252 +112,4 @@ master
   .btn-opcion:hover {
     transform: scale(1.05);
     box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.4);
-
   }
-
-  }
-
-  
-                                      /*DESDE ACA ES ESTILO GESTION USUARIOS DEL ADMIN*/
-.gestionusuarios-logo {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-.gestionusuarios-logo img {
-  width: 140px;
-  height: auto;
-  display: block;
-  margin: 0 auto;
-}
-
-.gestionusuarios-menu a {
-  display: block;
-  padding: 12px;
-  text-decoration: none;
-  color: #fff;
-  font-weight: bold;
-  margin-bottom: 5px;
-  transition: background 0.3s;
-}
-
-.gestionusuarios-menu a:hover,
-.gestionusuarios-menu .activo {
-  background-color: #09008b86;
-  color: white;
-  border-radius: 5px;
-}
-
-.gestionusuarios-stock {
-  padding: 20px;
-  font-family: Arial, sans-serif;
-}
-
-.gestionusuarios-header {
-  display: flex;
-  align-items: center;
-  gap: 15px;
-  margin-bottom: 20px;
-}
-
-.gestionusuarios-btn-agregar {
-  background-color: #c9c7ee;
-  padding: 8px 16px;
-  border-radius: 12px;
-  font-weight: bold;
-  border: none;
-  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.2);
-  cursor: pointer;
-  display: flex;
-  align-items: left;
-  text-decoration: none;
-}
-
-.gestionusuarios-buscar {
-  padding: 8px 12px;
-  border-radius: 20px;
-  border: 1px solid #ccc;
-  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
-  margin-left: 10px;
-  width: 500px;
-}
-
-.gestionusuarios-tabla {
-  background: white;
-  border-radius: 8px;
-  padding: 10px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  overflow-x: auto;
-  margin-top: 110px;
-}
-
-table {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-th,
-td {
-  padding: 10px;
-  border-bottom: 1px solid #ccc;
-  text-align: left;
-}
-
-.gestionusuarios-editar {
-  margin-right: 25px;
-  cursor: pointer;
-}
-
-.gestionusuarios-eliminar {
-  cursor: pointer;
-}
-
-.gestionusuarios-app {
-  display: flex;
-}
-
-.gestionusuarios-contenido {
-  flex-grow: 1;
-  padding: 20px;
-}
-
-.gestionusuarios-superior {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 20px;
-}
-
-.gestionusuarios-rol {
-  font-weight: bold;
-}
-
-.gestionusuarios-cerrar-sesion {
-  padding: 6px 12px;
-  border-radius: 8px;
-  background-color: #f44336;
-  color: white;
-  border: none;
-  cursor: pointer;
-}
-                                           /*ESTILOS STOCK ADMIN*/
-.sidebar {
-  background-color: #ab9ece;
-  min-width: 200px;
-  width: 15%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 100vh;
-  position: sticky;
-  top: 0;
-}
-
-.logo {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-.logo img {
-  width: 140px;
-    height: auto;
-
-  display: block;
-  margin: 0 auto;
-}
-
-.menu a {
-  display: block;
-  padding: 12px;
-  text-decoration: none;
-  color: #fff;
-  font-weight: bold;
-  margin-bottom: 5px;
-  transition: background 0.3s;
-}
-
-
-.menu a:hover,
-.menu .activo {
-  background-color: #09008b86;
-  color: white;
-  border-radius: 5px;
-}
-
-.stock-container {
-  padding: 20px;
-  font-family: Arial, sans-serif;
-}
-
-.stock-header {
-  display: flex;
-  align-items: center;
-  gap: 15px;
-  margin-bottom: 20px;
-}
-
-.btn-agregar,
-.btn-proveedores {
-  background-color: #c9c7ee;
-  padding: 8px 16px;
-  border-radius: 12px;
-  font-weight: bold;
-  border: none;
-  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.2);
-  cursor: pointer;
-  display: flex;
-  align-items: left;
-  text-decoration: none;
-}
-
-.input-buscar {
-  padding: 8px 12px;
-  border-radius: 20px;
-  border: 1px solid #ccc;
-  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
-  margin-left: 10px;
-  width: 500px;
-}
-
-.tabla-contenedor {
-  background: white;
-  border-radius: 8px;
-  padding: 10px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  overflow-x: auto;
-  margin-top: 110px;
-}
-
-table {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-th,
-td {
-  padding: 10px;
-  border-bottom: 1px solid #ccc;
-  text-align: left;
-}
-
-.icon-verde {
-  color: green;
-
-}
-
-.icon-editar {
-  margin-right: 25px;
-  cursor: pointer;
-}
-
-.icon-eliminar {
-  cursor: pointer;
-}
-
-.gestionusuarios input {
-  margin-left: -2px;
-  width: 223px;
-}
-
-
- 
